fixed some layout issues, make result area more visible

--- a/style.css
+++ b/style.css
@@ -22,7 +22,13 @@ body{
     justify-content: center;
 }
 
+.yes{
+    font-size: larger;
+    margin-right: 5px;
+}
 .result{
+    display: flex;
+    justify-content: end;
     border: solid;
     border-radius: 4px;
     border-width: 1px;
